# softgl

./: CMakeLists.txt  opengl32.def  readme.md  softgl.cfg
apigen/: apigen.py  gen.c  glfuncs.txt
rast_fasterizer/: CMakeLists.txt  clip.h  fasterizer.cpp
rast_opencl/: CMakeLists.txt  rast_opencl.cpp
rast_reference/: CMakeLists.txt  kernel.h  rast_reference.cpp
rast_reference/kernels/: depth.cpp  rast_tex_dst_src.cpp  rast_tex_dst_zero.cpp  rast_tex_one_msa.cpp  rast_tex_one_msc.cpp  rast_tex_one_one.cpp  rast_tex_one_zero.cpp  rast_tex_sa_msa.cpp  template.h  textured.cpp
rast_wireframe/: CMakeLists.txt  rast_wireframe.cpp  surface.cpp  surface.h
source/: GL.h  buffer.cpp  buffer.h  common.cpp  common.h  config.cpp  config.h  context.cpp  context.h  draw.cpp  draw.h  exports.h  forward.h  game_id.cpp  game_id.h  gdi_hook.cpp  gdi_hook.h  gl_func_enum.h  gl_func_names.c  gl_func_table.c  log.cpp  log.h  main.c  main.cpp  math.h  matrix.h  opengl.c  opengl.cpp  primative.cpp  primative.h  profile.cpp  profile.h  raster.cpp  raster.h  state.cpp  state.h  surface.cpp  texture.cpp  texture.h  vertex.cpp  (+6 more)
